--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,9 @@
 {
-    "liveServer.settings.port": 5501.
     "liveSassCompile.settings.formats": [
         {
-            "format": "expanded",
+            "format": "compressed",
             "extensionName": ".css",
-            "savePath": "/uy_ishi_4/css"
+            "savePath": "/css"
         }
     ],
 }
