--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,8 @@
     "liveSassCompile.settings.formats": [
         {
             "format": "compressed",
-            "extensionName": ".css",
+            "extensionName": ".mini.css",
             "savePath": "/css"
         }
-    ],
+    ]
 }
